design.staging.ubuntu.com/deployment-design.staging.ubuntu.com.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: design-staging-ubuntu-com
  labels:
    app: design-staging-ubuntu-com
spec:
  selector:
    app: design-staging-ubuntu-com
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
---

apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: design-staging-ubuntu-com
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: design-staging-ubuntu-com
    spec:
      containers:
        - name: design-staging-ubuntu-com
          image: prod-comms.docker-registry.canonical.com/design.ubuntu.com
          ports:
            - name: http
              containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            periodSeconds: 3
            successThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
